--- a/book/ml_principles/basis/ml.ipynb
+++ b/book/ml_principles/basis/ml.ipynb
@@ -6,15 +6,15 @@
             "metadata": {},
             "source": [
                 "# Machine Learning\n",
-                "Machine learning (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op wiskundige algorithmes om complexe patronen/structuren in **data** te **leren** herkennen en/of te reproduceren. De bedoeling is om software systemen te creeren die **voorspellingen** kunnen maken en/of **acties** kunnen ondernemen **zonder expliciete instructies te programmeren**.  \n",
+                "Machine learning (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op wiskundige algoritmes om complexe patronen/structuren in **data** te **leren** herkennen en/of te reproduceren. De bedoeling is om software systemen te creëren die **voorspellingen** kunnen maken en/of **acties** kunnen ondernemen **zonder expliciete instructies te programmeren**.  \n",
                 "  \n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple \n",
                 "Stel, we hebben een airco installatie die we willen automatiseren. De bedoeling is dat ze zichzelf inschakelt wanneer de binnentemperatuur boven een critische waarde $\\beta$ uitkomt. De vraag stelt zich dan: wat is de beste waarde voor $\\beta$?  \n",
                 "  \n",
-                "We kunnen dit *zonder ingebouwde machine learning* oplossen door een vaste temperatuur te hard-coden in het productieprocess. Dit heeft als voordeel dat er geen user-interface nodig is, maar er zullen flink wat gebruikers ontevreden zijn omwille van persoonlijke temperatuursensaties.\n",
-                "We kunnen, nog steeds *zonder ingebouwde machine learning*, tegemoet komen aan persoonlijke voorkeuren door gebruikers via een UI op ieder moment de mogelijkheid te geven temperatuur kiezen.  \n",
+                "We kunnen dit *zonder ingebouwde machine learning* oplossen door een vaste temperatuur te hard-coden in het productieproces. Dit heeft als voordeel dat er geen user-interface nodig is, maar er zullen flink wat gebruikers ontevreden zijn omwille van persoonlijke temperatuursensaties.\n",
+                "We kunnen, nog steeds *zonder ingebouwde machine learning*, tegemoet komen aan persoonlijke voorkeuren door gebruikers via een UI op ieder moment de mogelijkheid te geven een temperatuur te kiezen.  \n",
                 "  \n",
                 "Met machine learning kunnen we, *nadat gebruikers op voldoende momenten een voorkeur hebben ingegeven*, uit de ingegeven voorkeuren trachten te voorspellen wat het best moment is om de waarde van $\\beta$ *autonoom* aan te passen en wat de beste waarden dan is. Als we daarin slagen, zal het gebruiksgemak uiteraard nog groter zijn.  \n",
                 "  \n",
