--- a/book/ml_principles/basis/algorithmes.ipynb
+++ b/book/ml_principles/basis/algorithmes.ipynb
@@ -7,7 +7,7 @@
             "source": [
                 "# Algorithmes\n",
                 "[^Goodfellow_et_al]\n",
-                "[^Goodfellow_et_al]: Deze sectie is gebaseerd op [Goodfellow et al. (2016)](https://www.deeplearningbook.org/) (96-107).\n",
+                "[^Goodfellow_et_al]: Deze sectie is gebaseerd op [Goodfellow et al. (2016, 96-107)](https://www.deeplearningbook.org/front_matter.pdf).\n",
                 "\n",
                 "Een machine learning algorithme is een algorithme dat kan leren van data. Maar wat verstaan we juist onder \"**leren**\"?  \n",
                 "  \n",
