--- a/book/math_foundations/linalg/linalg.ipynb
+++ b/book/math_foundations/linalg/linalg.ipynb
@@ -1336,12 +1336,329 @@
         },
         {
             "cell_type": "markdown",
-            "id": "bc273f12",
+            "id": "6c7a6615",
             "metadata": {},
             "source": [
                 "## Waarom vectoren, matrices en tensors?\n",
+                "Oorspronkelijk werden vectoren in de meetkunde en de mechanica geïntroduceerd om grootheden voor te stellen die zowel een grootte (of lengte) als een richting hebben, zoals verplaatsingen, krachten en snelheid.\n",
+                "In dezelfde context werden matrices gebruikt om lineaire transformaties tussen vector-ruimtes voor te stellen.\n",
+                "In Machine Learning worden vectoren, matrices en tensors veel algemener gebruikt als containers voor data en model parameters omwille van:\n",
+                "- computationele efficiëntie\n",
+                "- speciale tensors en tensor-operaties (bv. rotatie-matrices, convolutionele filters, decompositie, enz.)\n",
+                "- compacte notatie\n",
+                "\n",
+                "## _Dot_ product\n",
+                "Misschien wel de belangrijkste operatie in machine learning is het **_dot_** of **_inner_** product tussen 2 vectoren uit eenzelfde ruimte (dus met een gelijk aantal elementen).\n",
+                "De eerste vector is daarbij een rij-vector $\\pmb{a}^T$ en de tweede een kolom-vector $\\pmb{b}$.\n",
+                "$$\n",
+                "\\begin{aligned}\n",
+                "\\pmb{a}^T\\pmb{b} &= \\pmb{a}.\\pmb{b} \\\\\n",
+                "&= \\sum_{i=1}^{n}a_ib_i \\\\\n",
+                "&= \\begin{bmatrix}\n",
+                "a_1 & a_2 \\ldots & a_n\n",
+                "\\end{bmatrix}\\begin{bmatrix}\n",
+                "b_1 \\cr\n",
+                "b_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "b_n\n",
+                "\\end{bmatrix} \\\\\n",
+                "&= a_1b_1 + a_2b_2 + \\ldots + a_nb_n\n",
+                "\\end{aligned}\n",
+                "$$\n",
+                "\n",
+                "**Het dot product tussen 2 vectoren uit een gegeven ruimte, is dus de som van de element-gewijze producten. Het resultaat is altijd een scalaire waarde.**"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 84,
+            "id": "d4af08fb",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Dot product result: 32\n"
+                    ]
+                }
+            ],
+            "source": [
+                "a = np.array([1, 2, 3])\n",
+                "b = np.array([4, 5, 6])\n",
+                "print(f\"Dot product result: {np.dot(a, b)}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "e23621a8",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "np.int64(32)"
+                        ]
+                    },
+                    "execution_count": 73,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "a[0] * b[0] + a[1] * b[1] + a[2] * b[2]"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "72384ba0",
+            "metadata": {},
+            "source": [
+                "  Het principe van het _dot_ product kan uitgebreid worden naar het geval een matrix en een vector uit dezelfde ruimte: $\\pmb{A}\\pmb{b}$.\n",
+                "Geometrisch moet de matrix $\\pmb{A}$ hier gezien worden als een verzameling van punten in dezelfde ruimte als waar $\\pmb{b}$ uit afkomstig is.\n",
+                "$\\pmb{A}$ heeft dus evenveel _kolommen_ als er elementen in $\\pmb{b}$ zijn.\n",
+                "$$\n",
+                "\\begin{aligned}\n",
+                "\\pmb{A}\\pmb{b} &= \\begin{bmatrix}\n",
+                "\\sum_{i=1}^{n}a_{1,i}b_i \\cr\n",
+                "\\sum_{i=1}^{n}a_{2,i}b_i \\cr\n",
+                "\\vdots  \\cr\n",
+                "\\sum_{i=1}^{n}a_{m,i}b_i\n",
+                "\\end{bmatrix} \\\\\n",
+                "&= \\begin{bmatrix}\n",
+                "a_{1,1} & a_{1,2} & \\ldots & a_{1,n} \\cr\n",
+                "a_{2,1} & a_{2,2} & \\ldots & a_{2,n} \\cr\n",
+                "\\vdots & \\vdots & \\ldots & \\vdots \\cr\n",
+                "a_{m,1} & a_{m,2} & \\ldots & a_{m,n}\n",
+                "\\end{bmatrix}\\begin{bmatrix}\n",
+                "b_1 \\cr\n",
+                "b_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "b_n\n",
+                "\\end{bmatrix} \\\\\n",
+                "&= \\begin{bmatrix}\n",
+                "a_{1,1}b_1 + a_{1,2}b_2 + \\ldots + a_{1,n}b_n \\cr\n",
+                "a_{2,1}b_1 + a_{2,2}b_2 + \\ldots + a_{2,n}b_n \\cr\n",
+                "\\vdots \\cr\n",
+                "a_{m,1}b_1 + a_{m,2}b_2 + \\ldots + a_{m,n}b_n\n",
+                "\\end{bmatrix}\n",
+                "\\end{aligned}\n",
+                "$$\n",
+                "\n",
+                "**Bij het dot product tussen een matrix en een vector, is resultaat altijd een vector met eventeel elementen als er _rijen_ zijn in de matrix.**"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 88,
+            "id": "acc754e6",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Matrix A shape: (2, 3)\n",
+                        "Matrix A has 2 rows and 3 columns.\n",
+                        "Dot product result:\n",
+                        "[32 77]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "A = np.array([[1, 2, 3], [4, 5, 6]])\n",
+                "print(f\"Matrix A shape: {A.shape}\")\n",
+                "nrow, ncol = A.shape\n",
+                "print(f\"Matrix A has {nrow} rows and {ncol} columns.\")\n",
+                "print(f\"Dot product result:\\n{np.dot(A, b)}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "169f2f01",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([32, 77])"
+                        ]
+                    },
+                    "execution_count": 82,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "np.array(\n",
+                "    [\n",
+                "        A[0, 0] * b[0] + A[0, 1] * b[1] + A[0, 2] * b[2],\n",
+                "        A[1, 0] * b[0] + A[1, 1] * b[1] + A[1, 2] * b[2],\n",
+                "    ]\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "07d46061",
+            "metadata": {},
+            "source": [
+                "Tenslotte bespreken we ook nog het geval van de uitbreiding naar 2 matrices; het _inner product_ $\\pmb{A}\\pmb{B}^T$.\n",
+                "Geometrisch kunnen we beide matrices zien als verzamelingen van punten in dezelfde $n$-dimensionele ruimte. Ze hebben hetzelfde aantal kolommen, maar niet per se het zelfde aantal rijen.\n",
+                "Meestal wordt $\\pmb{B}$ direct gezien als een matrix met $n$ rijen en een bepaald aantal kolomen $p$. Dan wordt de notatie simpelweg $\\pmb{A}\\pmb{B}$.\n",
+                "$$\n",
+                "\\begin{aligned}\n",
+                "\\pmb{A}\\pmb{B} &= \\begin{bmatrix}\n",
+                "a_{1,1} & a_{1,2} & \\ldots & a_{1,n} \\cr\n",
+                "a_{2,1} & a_{2,2} & \\ldots & a_{2,n} \\cr\n",
+                "\\vdots & \\vdots & \\ldots & \\vdots \\cr\n",
+                "a_{m,1} & a_{m,2} & \\ldots & a_{m,n}\n",
+                "\\end{bmatrix}\\begin{bmatrix}\n",
+                "b_{1,1} & b_{1,2} \\ldots & b_{1,p} \\cr\n",
+                "b_{2,1} & b_{2,2} \\ldots & b_{2,p} \\cr\n",
+                "\\vdots & \\vdots \\ldots & \\vdots \\cr\n",
+                "b_{n,1} & b_{n,2} \\ldots & b_{n,p}\n",
+                "\\end{bmatrix} \\\\\n",
+                "&= \\begin{bmatrix}\n",
+                "a_{1,1}b_{1,1} + a_{1,2}b_{2,1} + \\ldots + a_{1,n}b_{n,1} & a_{1,1}b_{1,2} + a_{1,2}b_{2,2} + \\ldots + a_{1,n}b_{n,2} & \\ldots & a_{1,1}b_{1,p} + a_{1,2}b_{2,p} + \\ldots + a_{1,n}b_{n,p} \\cr\n",
+                "a_{2,1}b_{1,1} + a_{2,2}b_{2,1} + \\ldots + a_{2,n}b_{n,1} & a_{2,1}b_{1,2} + a_{2,2}b_{2,2} + \\ldots + a_{2,n}b_{n,2} & \\ldots & a_{2,1}b_{1,p} + a_{2,2}b_{2,p} + \\ldots + a_{2,n}b_{n,p} \\cr\n",
+                "\\vdots & \\vdots & \\vdots & \\vdots \\cr\n",
+                "a_{m,1}b_{1,1} + a_{m,2}b_{2,1} + \\ldots + a_{m,n}b_{n,1} & a_{m,1}b_{1,2} + a_{m,2}b_{2,2} + \\ldots + a_{m,n}b_{n,2} & \\ldots & a_{m,1}b_{1,p} + a_{m,2}b_{2,p} + \\ldots + a_{m,n}b_{n,p}\n",
+                "\\end{bmatrix}\n",
+                "\\end{aligned}\n",
+                "$$\n",
+                "\n",
+                "**Bij het dot product van 2 matrices $\\pmb{A}$ en $\\pmb{B}$, is resultaat altijd een matrix met eventeel rijen als er _rijen_ zijn in $\\pmb{A}$ en evenveel kolommen als er kolommen zijn in $\\pmb{B}$.**"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 87,
+            "id": "58942b0b",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Matrix B shape: (3, 4)\n",
+                        "Dot product result:\n",
+                        "[[ 74  80  86  92]\n",
+                        " [173 188 203 218]]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "B = np.array([[7, 8, 9, 10], [11, 12, 13, 14], [15, 16, 17, 18]])\n",
+                "print(f\"Matrix B shape: {B.shape}\")\n",
+                "print(f\"Dot product result:\\n{np.dot(A, B)}\")  # Result is 2x4 matrix"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "38155373",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([[ 74,  80,  86,  92],\n",
+                            "       [173, 188, 203, 218]])"
+                        ]
+                    },
+                    "execution_count": 91,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "np.array(\n",
+                "    [\n",
+                "        [\n",
+                "            A[0, 0] * B[0, 0] + A[0, 1] * B[1, 0] + A[0, 2] * B[2, 0],\n",
+                "            A[0, 0] * B[0, 1] + A[0, 1] * B[1, 1] + A[0, 2] * B[2, 1],\n",
+                "            A[0, 0] * B[0, 2] + A[0, 1] * B[1, 2] + A[0, 2] * B[2, 2],\n",
+                "            A[0, 0] * B[0, 3] + A[0, 1] * B[1, 3] + A[0, 2] * B[2, 3],\n",
+                "        ],\n",
+                "        [\n",
+                "            A[1, 0] * B[0, 0] + A[1, 1] * B[1, 0] + A[1, 2] * B[2, 0],\n",
+                "            A[1, 0] * B[0, 1] + A[1, 1] * B[1, 1] + A[1, 2] * B[2, 1],\n",
+                "            A[1, 0] * B[0, 2] + A[1, 1] * B[1, 2] + A[1, 2] * B[2, 2],\n",
+                "            A[1, 0] * B[0, 3] + A[1, 1] * B[1, 3] + A[1, 2] * B[2, 3],\n",
+                "        ],\n",
+                "    ]\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "98213a26",
+            "metadata": {},
+            "source": [
+                "### Toepassingen\n",
+                "#### Lineaire gewichten\n",
+                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_, worden input features vertaald naar model outputs door gewogen sommen te nemen."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "cbd34d3f",
+            "metadata": {},
+            "outputs": [],
+            "source": []
+        },
+        {
+            "cell_type": "markdown",
+            "id": "bc273f12",
+            "metadata": {},
+            "source": [
+                "#### Gewogen gemiddeldes\n",
+                "Ieder _arithmetisch_ gemiddelde van een reeks datapunten van een bepaald type, kan uitgedrukt worden aan de hand van een dot product tussen een vector van _gewichten_ en de data-vector $\\pmb{y}.\\pmb{w}$,\n",
+                "waarbij de som van de elementen van $\\pmb{w}$ exact $1$ is.  \n",
+                "  \n",
+                "Voor het algemene on-/gewogen gemiddelde krijgen we:\n",
+                "$$\n",
+                "\\begin{aligned}\n",
+                "\\pmb{y}^T\\pmb{w} = \\sum_{i=1}^{n}y_iw_i = \\begin{bmatrix}\n",
+                "y_1 & y_2 \\ldots & y_n\n",
+                "\\end{bmatrix}\\begin{bmatrix}\n",
+                "w_1 \\cr\n",
+                "w_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "w_n\n",
+                "\\end{bmatrix} &= y_1w_1 + y_2w_2 + \\ldots + y_nw_n \\\\\n",
+                "w_1+w_2+\\ldots+w_n &= 1\n",
+                "\\end{aligned}\n",
+                "$$\n",
+                "\n",
+                "Voor een ongewogen gemiddelde krijgen we dan:\n",
+                "$$\n",
+                "\\pmb{y}^T\\pmb{w} = \\sum_{i=1}^{n}y_i\\frac{1}{n} = \\begin{bmatrix}\n",
+                "y_1 & y_2 \\ldots & y_n\n",
+                "\\end{bmatrix}\\begin{bmatrix}\n",
+                "\\frac{1}{n} \\cr\n",
+                "\\frac{1}{n} \\cr\n",
+                "\\vdots  \\cr\n",
+                "\\frac{1}{n}\n",
+                "\\end{bmatrix} = \\frac{y_1}{n} + \\frac{y_2}{n} + \\ldots + \\frac{y_n}{n}\n",
+                "$$\n",
+                "#### Euclidische afstand\n",
+                "\n",
+                "\n",
+                "#### Normen\n",
+                "\n",
                 "🚧"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "8e01578e",
+            "metadata": {},
+            "source": []
         }
     ],
     "metadata": {
