--- a/book/math_foundations/linalg/linalg.ipynb
+++ b/book/math_foundations/linalg/linalg.ipynb
@@ -1134,7 +1134,7 @@
                 "$$\n",
                 "\n",
                 "\n",
-                ":::{tip} y, X\n",
+                ":::{note} y, X\n",
                 "In machine learning worden (uni-variate) target waarden doorgaans aangeduid met de _vector_ $\\pmb{y}$. Uni-variaat wil zeggen dat het over slechts 1 target gaat per input. Als over (uni-variate) model outputs gaat,\n",
                 "gebruiken we $\\pmb{\\hat{y}}$ om aan te duiden dat het over _schattingen_ gaat.  \n",
                 "De inputs worden aangeduid met de _matrix_ $\\pmb{X}$, waarbij de **rij-vector** $\\pmb{x_i} = [x_{i, 1}, \\ldots, x_{i, j}, \\ldots, x_{i, n}]^T$ de $i$-de input is.\n",
@@ -1600,16 +1600,43 @@
             "source": [
                 "### Toepassingen\n",
                 "#### Lineaire gewichten\n",
-                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_, worden input features vertaald naar model outputs door gewogen sommen te nemen."
+                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_, worden input features vertaald naar model outputs door gewogen sommen te nemen.\n",
+                "\n",
+                ":::{note} Perceptron\n",
+                "Een perceptron is de eenvoudigste vorm van een neuraal netwerk. Inputs worden via een lineaire combinatie met gewichten en een (meestal niet-lineaire) activatie functie vertaald naar een output.\n",
+                "```\n",
+                "           x₁             x₂     ...     xₙ             b  \n",
+                "           |              |              |              |\n",
+                "           |              |              |              |\n",
+                "           |              |              |              |\n",
+                "           w₁             w₂     ...     wₙ            1.0\n",
+                "            \\             |             /              /\n",
+                "             \\            |            /              /\n",
+                "              \\           |           /              /\n",
+                "               \\          |          /              /\n",
+                "                \\         |         /              /\n",
+                "                 \\        |        /              /\n",
+                "                  \\       |       /              /\n",
+                "                   \\      |      /              /\n",
+                "                    \\     |     /              /\n",
+                "                     \\    |    /              /\n",
+                "                      \\   |   /              /\n",
+                "                       \\  |  /              /\n",
+                "                        \\ | /              /\n",
+                "                         \\|/              /\n",
+                "                          v              v\n",
+                "                        Dot product + bias\n",
+                "                 z = w₁x₁ + w₂x₂ + ... + wₙxₙ + b\n",
+                "                                |\n",
+                "                                v\n",
+                "                        Activation function\n",
+                "                              φ(z)\n",
+                "                                |\n",
+                "                                v\n",
+                "                             Output y\n",
+                "```\n",
+                ":::"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "cbd34d3f",
-            "metadata": {},
-            "outputs": [],
-            "source": []
         },
         {
             "cell_type": "markdown",
@@ -1645,20 +1672,16 @@
                 "\\vdots  \\cr\n",
                 "\\frac{1}{n}\n",
                 "\\end{bmatrix} = \\frac{y_1}{n} + \\frac{y_2}{n} + \\ldots + \\frac{y_n}{n}\n",
-                "$$\n",
-                "#### Euclidische afstand\n",
-                "\n",
-                "\n",
-                "#### Normen\n",
-                "\n",
-                "🚧"
+                "$$"
             ]
         },
         {
             "cell_type": "markdown",
             "id": "8e01578e",
             "metadata": {},
-            "source": []
+            "source": [
+                "🚧"
+            ]
         }
     ],
     "metadata": {
