--- a/book/math_foundations/linalg/linalg.ipynb
+++ b/book/math_foundations/linalg/linalg.ipynb
@@ -1677,6 +1677,33 @@
         },
         {
             "cell_type": "markdown",
+            "id": "09e59ee1",
+            "metadata": {},
+            "source": [
+                "#### Euclidische norm\n",
+                "Vectoren hebben een grootte en een richting, zoals bijvoorbeeld de versnelling van een object in de ruimte $\\pmb{a} = [a_x a_y a_z]^T$.\n",
+                "Vaak willen we de grootte uitdrukken in een scalaire waarde. Dat doen we aan de hand van een **norm-functie $L^p$** die gedefiniëert is als:\n",
+                "$$\n",
+                "||\\pmb{x}||_p = \\begin{pmatrix}\\sum_{i}|x_i|^p\\end{pmatrix}^{\\frac{1}{p}}\n",
+                "$$\n",
+                "**De norm van een vector in een bepaalde ruimte drukt de afstand uit tussen de oorsprong en het punt waar de vector betrekking op heeft**.\n",
+                "In een _Euclidische_ ruimte wordt die afstand gegeven door de $L^2$ norm. De $L^2$ norm van een vector bekomt men door het dot product te nemen van de vector met zichzelf:  \n",
+                "\n",
+                "\\begin{align}\n",
+                "||\\pmb{x}||_2 &= \\sqrt{\\sum_{i}x_i^2} \\\\\n",
+                "&= \\sqrt{\\sum_{i}x_ix_i} \\\\\n",
+                "&= \\sqrt{\\pmb{x}^T\\pmb{x}}\n",
+                "\\end{align}"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "0b5cd3ba",
+            "metadata": {},
+            "source": []
+        },
+        {
+            "cell_type": "markdown",
             "id": "8e01578e",
             "metadata": {},
             "source": [
