--- a/book/math_foundations/linalg/linalg.ipynb
+++ b/book/math_foundations/linalg/linalg.ipynb
@@ -1700,7 +1700,14 @@
             "cell_type": "markdown",
             "id": "0b5cd3ba",
             "metadata": {},
-            "source": []
+            "source": [
+                "#### _Cosine similarity_\n",
+                "Vaak willen we ook de afstand _tussen_ 2 vectoren uitdrukken in een scalaire waarde, bijvoobeeld in de context van _similarity search_. In Euclidische ruimtes wordt dan vaak gekeken naar de cosinus van de hoek tussen 2 vectoren $cos({\\theta})$. Dit heet dan de _cosine similarity_ en wordt bekomen door het dot product te nemen en het te delen door de respectievelijke Euclidische normen:\n",
+                "$$\n",
+                "cos(\\theta) = \\frac{\\pmb{a}^T\\pmb{b}}{||\\pmb{a}||_2||\\pmb{b}||_2}\n",
+                "$$\n",
+                "In het geval dat $\\pmb{a}$ en $\\pmb{b}$ gecentreerd worden door hun respectievelijke gemiddeldes van de waarden af te trekken, is de cosine similaty gelijk aan de Pearson correlatiecoëfficient. "
+            ]
         },
         {
             "cell_type": "markdown",
