--- a/book/math_foundations/linalg/linalg.ipynb
+++ b/book/math_foundations/linalg/linalg.ipynb
@@ -6,8 +6,6 @@
             "metadata": {},
             "source": [
                 "# Lineaire Algebra\n",
-                "[^Goodfellow_et_al]\n",
-                "[^Goodfellow_et_al]: Deze sectie is gebaseerd op [Goodfellow et al. (2016, 31-52)](https://www.deeplearningbook.org/front_matter.pdf).\n",
                 "\n",
                 "## Notatie\n",
                 "We volgen doorheen de cursus de notatie conventies in [Goodfellow et al. (2016, _xi-xiv_)](https://www.deeplearningbook.org/front_matter.pdf).\n",
@@ -1347,6 +1345,102 @@
                 "- speciale tensors en tensor-operaties (bv. rotatie-matrices, convolutionele filters, decompositie, enz.)\n",
                 "- compacte notatie\n",
                 "\n",
+                "## Simpele operaties\n",
+                "### Scalair optellen\n",
+                "$$\n",
+                "\\pmb{a} + b = \\begin{bmatrix}\n",
+                "a_1 + b \\cr\n",
+                "a_2 +b \\cr\n",
+                "\\vdots  \\cr\n",
+                "a_n + b\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "$$\n",
+                "\\pmb{A} + b = \\begin{bmatrix}\n",
+                "A_{1,1} + b & \\ldots & A_{1,j} + b & \\ldots & A_{1,n} + b \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{i,1} + b & \\ldots & A_{i,j} + b & \\ldots & A_{i,n} + b \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{m,1} + b & \\ldots & A_{m,j} + b & \\ldots & A_{m,n} + b\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "### Scalaire vermenigvuldiging\n",
+                "$$\n",
+                "\\pmb{a}b = \\begin{bmatrix}\n",
+                "a_1b \\cr\n",
+                "a_2b \\cr\n",
+                "\\vdots  \\cr\n",
+                "a_nb\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "$$\n",
+                "\\pmb{A}b = \\begin{bmatrix}\n",
+                "A_{1,1}b & \\ldots & A_{1,j}b & \\ldots & A_{1,n}b \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{i,1}b & \\ldots & A_{i,j}b & \\ldots & A_{i,n}b \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{m,1}b & \\ldots & A_{m,j}b & \\ldots & A_{m,n}b\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "### Optellen\n",
+                ":::{warning} $ $\n",
+                "Enkel bij gelijke dimensies.\n",
+                ":::\n",
+                "als\n",
+                "$$\n",
+                "\\pmb{a} = \\begin{bmatrix}\n",
+                "a_1 \\cr\n",
+                "a_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "a_n\n",
+                "\\end{bmatrix}, \\pmb{b} = \\begin{bmatrix}\n",
+                "b_1 \\cr\n",
+                "b_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "b_n\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "dan\n",
+                "$$\n",
+                "\\pmb{a} + \\pmb{b} = \\begin{bmatrix}\n",
+                "a_1 + b_1 \\cr\n",
+                "a_2 + b_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "a_n + b_n\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "als\n",
+                "$$\n",
+                "\\pmb{A} = \\begin{bmatrix}\n",
+                "A_{1,1} & \\ldots & A_{1,j} & \\ldots & A_{1,n} \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{i,1} & \\ldots & A_{i,j} & \\ldots & A_{i,n} \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{m,1} & \\ldots & A_{m,j} & \\ldots & A_{m,n}\n",
+                "\\end{bmatrix}, \\pmb{B} = \\begin{bmatrix}\n",
+                "B_{1,1} & \\ldots & B_{1,j} & \\ldots & B_{1,n} \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "B_{i,1} & \\ldots & B_{i,j} & \\ldots & B_{i,n} \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "B_{m,1} & \\ldots & B_{m,j} & \\ldots & B_{m,n}\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "dan\n",
+                "$$\n",
+                "\\pmb{A} + \\pmb{B} = \\begin{bmatrix}\n",
+                "A_{1,1} + B_{1,1} & \\ldots & A_{1,j} + B_{1,j} & \\ldots & A_{1,n} + B_{1,n}\\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{i,1} + B_{i,1} & \\ldots & A_{i,j} + B_{i,j} & \\ldots & A_{i,n} + B_{i,n} \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{m,1} + B_{m,1} & \\ldots & A_{m,j} + B_{m,j} & \\ldots & A_{m,n} + B_{m,n}\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
                 "## _Dot_ product\n",
                 "Misschien wel de belangrijkste operatie in machine learning is het **_dot_** of **_inner_** product tussen 2 vectoren uit eenzelfde ruimte (dus met een gelijk aantal elementen).\n",
                 "De eerste vector is daarbij een rij-vector $\\pmb{a}^T$ en de tweede een kolom-vector $\\pmb{b}$.\n",
@@ -1601,6 +1695,7 @@
                 "### Toepassingen\n",
                 "#### Lineaire gewichten\n",
                 "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_, worden input features vertaald naar model outputs door gewogen sommen te nemen.\n",
+                "Deze operatie komt neer op het dot product tussen de input vector $\\pmb{x}$ en een vector van gewichten $\\pmb{w}$: $\\pmb{w}^T\\pmb{x}$.\n",
                 "\n",
                 ":::{note} Perceptron\n",
                 "Een perceptron is de eenvoudigste vorm van een neuraal netwerk. Inputs worden via een lineaire combinatie met gewichten en een (meestal niet-lineaire) activatie functie vertaald naar een output.\n",
@@ -1706,8 +1801,16 @@
                 "$$\n",
                 "cos(\\theta) = \\frac{\\pmb{a}^T\\pmb{b}}{||\\pmb{a}||_2||\\pmb{b}||_2}\n",
                 "$$\n",
-                "In het geval dat $\\pmb{a}$ en $\\pmb{b}$ gecentreerd worden door hun respectievelijke gemiddeldes van de waarden af te trekken, is de cosine similaty gelijk aan de Pearson correlatiecoëfficient. "
+                "In het geval dat $\\pmb{a}$ en $\\pmb{b}$ gecentreerd worden door hun respectievelijke gemiddeldes van de waarden af te trekken, is de cosine similarity gelijk aan de Pearson correlatiecoëfficient. "
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "838923f3",
+            "metadata": {},
+            "outputs": [],
+            "source": []
         },
         {
             "cell_type": "markdown",
