--- a/book/algemeen/hello_world.ipynb
+++ b/book/algemeen/hello_world.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "92241145",
    "metadata": {},
    "outputs": [
@@ -29,11 +29,21 @@
    "source": [
     "print(\"hello world!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b993a016",
+   "metadata": {},
+   "source": [
+    "Er zijn heel veel bronnen beschikbaar online om je vertrouwd te maken met Jupyter Notebooks, bijvoorbeeld:\n",
+    "- [Jupyter Notebooks in VS Code](https://code.visualstudio.com/docs/datascience/jupyter-notebooks#_create-or-open-a-jupyter-notebook)\n",
+    "- [Jupyter Notebooks in Google Colaboratory](https://colab.research.google.com/notebooks/basic_features_overview.ipynb)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-principles",
+   "display_name": "ml-courses",
    "language": "python",
    "name": "python3"
   },
